updated HomeController.java & Admin.java